Exercise for form hide and show of admin & user

--- a/JQuery Topics/index.html
+++ b/JQuery Topics/index.html
@@ -9,16 +9,61 @@
 <body>
     <section class="container">
         <div class="card">
-            <button class="btn btn-primary btn-sm mb-3" id="toggleButton">Toggle Image</button>
-            <button class="btn btn-info btn-sm mb-3" id="showButton">Show Image</button>
-            <button class="btn btn-secondary btn-sm mb-3" id="hideButton">Hide Image</button>
+            <div class="card-header">
+                <h1 class="card-title">Jquery Image Hide & Show</h1>
+            </div>
+            <div class="card-body d-flex justify-content-between">
+                <button class="btn btn-primary btn-sm mb-3" id="toggleButton">Toggle Image</button>
+                <button class="btn btn-info btn-sm mb-3" id="showButton">Show Image</button>
+                <button class="btn btn-secondary btn-sm mb-3" id="hideButton">Hide Image</button>
+            </div>
         </div>
         <div class="card">
-            <div class="card-body">
+            <div class="card-body d-flex flex-column align-items-center">
                 <img src="rajesh_hamal.png" alt="Rajesh Hamal" 
                 class="img-fluid img-thumbnail" 
                 id="image" style="display: none;"
                 width="300" height="600">
+                <span id="showMessage"></span>
+            </div>
+        </div>
+    </section>
+    <section class="container">
+        <h1>Exercise: Show and Hide Admin & User Form respectively</h1>
+        <div class="card">
+            <div class="card-header">
+                <h2 class="card-title">Admin & User Form</h2>
+                <div class="d-flex justify-content-start gap-2">
+                    <button class="btn btn-primary btn-sm mb-3" id="showAdminFormButton">Show Admin Form</button>
+                    <button class="btn btn-info btn-sm mb-3" id="showUserFormButton">Show User Form</button>
+                </div>
+            </div>
+            <div class="card-body">
+                <!-- Admin Form -->
+                <form id="adminForm" style="display: none;">
+                    <div class="form-group">
+                        <label for="Username">Enter Username:</label>
+                        <input type="text" name="Username" id="username" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="Password">Enter Password:</label>
+                        <input type="password" name="Password" id="password" class="form-control">
+                    </div>
+                    <button type="submit" class="btn btn-primary mt-2">Login as Admin</button>
+                </form>
+
+                <!-- User Form -->
+                <form id="userForm" style="display: none;">
+                    <div class="form-group">
+                        <label for="Username">Enter Username:</label>
+                        <input type="text" name="Username" id="username" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="Password">Enter Password:</label>
+                        <input type="password" name="Password" id="password" class="form-control">
+                    </div>
+                    <button type="submit" class="btn btn-primary mt-2">Login as Admin</button>
+                </form>
             </div>
         </div>
     </section>
@@ -27,14 +72,27 @@
         $(document).ready(function(){
             $("#toggleButton").click(function(){
                 $("#image").toggle("fast");
+                $("#showMessage").text("Hello! I am Rajesh Hamal.");
             });
 
             $("#hideButton").click(function(){
                 $("#image").hide("slow");
+                $("#showMessage").text("Goodbye! See you later.");
             });
 
             $("#showButton").click(function(){
                 $("#image").show("fast");
+                $("#showMessage").text("Hello! I am Rajesh Hamal.");
+            });
+
+            // for exercise
+            $("#showAdminFormButton").click(function(){
+                $("#adminForm").show("fast");
+                $("#userForm").hide("fast");
+            });
+            $("#showUserFormButton").click(function(){
+                $("#userForm").show("fast");
+                $("#adminForm").hide("fast");
             });
         });
     </script>
