--- a/JQuery Topics/index.html
+++ b/JQuery Topics/index.html
@@ -41,6 +41,7 @@
             <div class="card-body">
                 <!-- Admin Form -->
                 <form id="adminForm" style="display: none;">
+                    <h1 class="text-center">Admin Login</h1>
                     <div class="form-group">
                         <label for="Username">Enter Username:</label>
                         <input type="text" name="Username" id="username" class="form-control">
@@ -54,6 +55,7 @@
 
                 <!-- User Form -->
                 <form id="userForm" style="display: none;">
+                    <h1 class="text-center">User Login</h1>
                     <div class="form-group">
                         <label for="Username">Enter Username:</label>
                         <input type="text" name="Username" id="username" class="form-control">
@@ -62,7 +64,7 @@
                         <label for="Password">Enter Password:</label>
                         <input type="password" name="Password" id="password" class="form-control">
                     </div>
-                    <button type="submit" class="btn btn-primary mt-2">Login as Admin</button>
+                    <button type="submit" class="btn btn-primary mt-2">Login as User</button>
                 </form>
             </div>
         </div>
