--- a/JQuery Topics/index.html
+++ b/JQuery Topics/index.html
@@ -12,7 +12,7 @@
             <div class="card-header">
                 <h1 class="card-title">Jquery Image Hide & Show</h1>
             </div>
-            <div class="card-body d-flex justify-content-between">
+            <div class="card-body d-flex justify-content-start gap-2">
                 <button class="btn btn-primary btn-sm mb-3" id="toggleButton">Toggle Image</button>
                 <button class="btn btn-info btn-sm mb-3" id="showButton">Show Image</button>
                 <button class="btn btn-secondary btn-sm mb-3" id="hideButton">Hide Image</button>
